Fixed navbar overlapping my content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
 html {
   scroll-behavior: smooth;
   font-size: 1rem;
+  scroll-padding-top: 70px;
 }
 
 body {
